--- a/Typescript/package.json
+++ b/Typescript/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "jest"
   },
   "keywords": [],
   "author": "Fatih Ertuğral",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vite": "^4.0.0"
   }
 }
