--- a/Typescript/tsconfig.json
+++ b/Typescript/tsconfig.json
@@ -1,15 +1,21 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "lib": [
-            "es2015"
-        ],
+        "baseUrl": ".",
+        "target": "ESNext",
+        "useDefineForClassFields": true,
+        "module": "ESNext",
+        "lib": ["ESNext", "DOM"],
+        "moduleResolution": "Node",
         "strict": true,
-        "declaration": true,
-        "outDir": "dist",
-        "sourceMap": true
-    },
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "esModuleInterop": true,
+        "noEmit": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "skipLibCheck": true
+      },
     "include": [
         "src/**/*",
         "__test__/**/*"
