--- a/Typescript/tsconfig.json
+++ b/Typescript/tsconfig.json
@@ -8,13 +8,13 @@
         "moduleResolution": "Node",
         "strict": true,
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        "isolatedModules": false,
         "esModuleInterop": true,
         "noEmit": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
       },
     "include": [
         "src/**/*",
